# Canvas

./: .gitignore  LICENSE  draw_utils.py  edit_tool.py  element.py  handle.py  main.py  main_gui.py  main_gui.pyw  pyproject.toml  readme.md  viewport.py  world.py  world_globals.py
canvasim/: __init__.py
canvasim/canvas/: draw_utils.py  edit_tool.py  element.py  handle.py  transformation.py  viewport.py  world.py  world_globals.py
canvasim/gui/: __init__.py  color_utils.py  gui_context.py  gui_element.py  gui_globals.py  primitives.py  radio_button.py  slider.py  text_box.py  toggle_button.py  up_down.py
canvasim/shapes/: polygon.py  polygon_tool.py  rectangle.py  rectangle_tool.py
examples/: main.py  standalone_gui.pyw
gui/: __init__.py  gui_context.py  gui_element.py  gui_globals.py  primitives.py
shapes/: __init__.py  polygon.py  polygon_tool.py  rectangle.py  rectangle_tool.py
world_canvas/: __init__.py  draw_utils.py  edit_tool.py  element.py  handle.py  viewport.py  world.py  world_globals.py
